# gehmboi

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/core/opcode/: opcode.cpp  opcode.hpp  ops.hpp
src/emulator/: CMakeLists.txt
src/emulator/cpu/: cpu.cpp  cpu.hpp  cpu_opcode.cpp  cpu_opcode.hpp  cpu_ops.cpp  cpu_ops.hpp  cpu_register.hpp
tests/: CMakeLists.txt
tests/emulator/cpu/: cpu_opcode_test.cpp
